--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dev_dependencies:
   firebase_auth: ^4.17.8
   cloud_firestore: ^4.15.8
   dio: ^5.9.0
+  supabase_flutter: ^2.10.3  # Untuk koneksi ke Supabase
+  image_picker: ^1.2.1      # Untuk ambil foto dari galeri
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
